--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>住房公积金</title>
+    <title>员工福利小贴士</title>
     <link rel="stylesheet" href="css/reset.css">
     <style>
         img {
