--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>员工福利小贴士。</title>
+    <title>员工福利小贴士</title>
     <link rel="stylesheet" href="css/reset.css">
     <style>
         img {
@@ -76,10 +76,10 @@
             display: block;
             background: #BB9E74;
             box-shadow: 0 0 2px #8F7044;
-            border-width: 0px; /* 边框宽度 */
-            border-radius: 3px; /* 边框半径 */
-            cursor: pointer; /* 鼠标移入按钮范围时出现手势 */
-            outline: none; /* 不显示轮廓线 */
+            border-width: 0px;
+            border-radius: 3px;
+            cursor: pointer;
+            outline: none;
             margin-bottom: 20px;
         }
         a{
@@ -102,5 +102,6 @@
     <button class="button1"><a href="other1.html">住房公积金商品房提取</a></button>
     <button class="button2"><a href="other.html">商业保险医疗费用报销</a></button>
 </div>
+
 </body>
 </html>
